--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home | Linux Journey</title>
+    <link rel="shortcut icon" href="src/img/image.png" type="image/x-icon" />
   </head>
   <body class="background">
     <!-- <div class="parent">
