--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <div class="innerheader">
           <h2 style="color: white; margin-left: 40px">Linux journey</h2>
         </div>
+        <p style="color: white; font-size: 18px; margin-right: 20px">
+          Language
+        </p>
       </div>
     </header>
     <div class="intro">
